# libcsgp4

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  config.h
.circleci/: config.yml
.github/workflows/: cmake.yml
aaplus-v2-48/: AA+.htm  AADynamicalTime.cpp
src/: CMakeLists.txt  CoordEcliptic.cpp  CoordEquatorial.cpp  CoordGeodetic.cpp  CoordGeodetic.h  CoordTopocentric.cpp  CoordTopocentric.h  DateTime.cpp  DateTime.h  DecayedException.cpp  DecayedException.h  Eci.cpp  Eci.h  Globals.cpp  Globals.h  LunarModel.cpp  Observer.cpp  Observer.h  OrbitalElements.cpp  SGP4.cpp  SatelliteException.cpp  SatelliteException.h  SolarModel.cpp  SolarPosition.cpp  SolarPosition.h  SunModel.cpp  TimeSpan.cpp  TimeSpan.h  Tle.cpp  TleException.cpp  TleException.h  Util.cpp  Util.h  Vector.cpp  Vector.h  config.h.in  version.cpp
src/csgp4/: CoordEcliptic.h  CoordEquatorial.h  CoordGeodetic.h  CoordTopocentric.h  DateTime.h  DecayedException.h  Eci.h  LunarModel.h  Observer.h  OrbitalElements.h  SGP4.h  SatelliteException.h  SolarModel.h  SolarPosition.h  SunModel.h  TimeSpan.h  Tle.h  TleException.h  Vector.h  config.h  version.h
tests/: CMakeLists.txt  common.h  test_CoordEcliptic.cpp  test_CoordEquatorial.cpp  test_CoordGeodetic.cpp  test_CoordTopocentric.cpp  test_DateTime.cpp  test_Eci.cpp  test_LunarModel.cpp  test_Observer.cpp  test_OrbitalElements.cpp  test_Overview.cpp  test_SGP4.cpp  test_SolarModel.cpp  test_SolarPosition.cpp  test_SunModel.cpp  test_TimeSpan.cpp  test_Tle.cpp  test_Utils.cpp  test_Vector.cpp  test_version.cpp
