PROJECT(csgp4 C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4 FATAL_ERROR)
SET(CMAKE_MODULE_PATH 
    "${PROJECT_SOURCE_DIR}/cmake"
    "${CMAKE_MODULE_PATH}"
)

SET(LIBCSGP4_MAJOR "1")
SET(LIBCSGP4_MINOR "0")
SET(LIBCSGP4_PATCH "0")
SET(LIBCSGP4_VERSION "${LIBCSGP4_MAJOR}.${LIBCSGP4_MINOR}.${LIBCSGP4_PATCH}")

SET(CMAKE_VERSION_STRING "${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}")

SET(LIBCSGP4_DESCRIPTION "Satellite Propergation Library for C++11")

OPTION(LIBCSGP4_TESTS "Build and run tests" ON)

FIND_PACKAGE(Git QUIET)
IF(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
    EXECUTE_PROCESS(
        COMMAND             "${GIT_EXECUTABLE}" describe --always# | sed -e "s:v::"
        WORKING_DIRECTORY   "${PROJECT_SOURCE_DIR}"
        OUTPUT_VARIABLE     GIT_TAG
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
ELSEIF(EXISTS ${PROJECT_SOURCE_DIR}/.version)
    file (STRINGS .version GIT_TAG)
ELSE()
    SET(GIT_TAG "Unknown")
ENDIF()

CONFIGURE_FILE(src/config.h.in ${PROJECT_SOURCE_DIR}/src/config.h @ONLY)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(aaplus-v2-48)

IF(LIBCSGP4_TESTS)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(tests)
ENDIF()


