
SET(FIND_LIBRARY_USE_LIB64_PATHS 1)

SET(THREADS_PREFER_PTHREAD_FLAG ON)
SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

ENABLE_TESTING()

SET(LIBS ${LIBS} 
    csgp4
    pthread
    ${CMAKE_THREAD_LIBS_INIT}
    ${GTEST_LIBRARIES}
    ${GTEST_MAIN_LIBRARIES}
)

MACRO(ADD_SGP4_TEST NAME)
    LIST(APPEND all_tests ${NAME})
    ADD_EXECUTABLE(${NAME} ${NAME}.cpp)
    TARGET_LINK_LIBRARIES(${NAME} ${PROJECT_NAME} ${LIBS})
    ADD_TEST(NAME ${NAME} COMMAND ${NAME})
ENDMACRO(ADD_SGP4_TEST)

ADD_SGP4_TEST(test_version)
ADD_SGP4_TEST(test_Vector)
ADD_SGP4_TEST(test_TimeSpan)
ADD_SGP4_TEST(test_CoordGeodetic)
ADD_SGP4_TEST(test_DateTime)
ADD_SGP4_TEST(test_Eci)
ADD_SGP4_TEST(test_CoordTopocentric)
ADD_SGP4_TEST(test_CoordEquatorial)
ADD_SGP4_TEST(test_Observer)
ADD_SGP4_TEST(test_Tle)
ADD_SGP4_TEST(test_SolarPosition)
ADD_SGP4_TEST(test_OrbitalElements)
ADD_SGP4_TEST(test_SGP4)
ADD_SGP4_TEST(test_Overview)
ADD_SGP4_TEST(test_Utils)

